# cursor-settings-sync

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
cursor_sync/: __init__.py  config.py  cursor_paths.py  gist_client.py  logger.py  settings_manager.py
tests/: conftest.py  test_config.py  test_cursor_paths.py  test_gist_client.py  test_main.py  test_settings_manager.py
